# zera-modulemanager

./: .gitignore  0_default-session.json  1_ref-session.json  2_ced-session.json  CMakeLists.txt  ModuleManager.pro  com5003-ced-session.json  com5003-meas-session.json  com5003-ref-session.json  data1.qrc  default-session.json  modulemanager_config.json  mt310s2-meas-session.json  ref-session.json  test_cert.pem
scripts/: data_logger.qml  test_script_logger.qml
src/: customerdatasystem.cpp  customerdatasystem.h  diriteratorworker.cpp  diriteratorworker.h  jsonsessionloader.cpp  jsonsessionloader.h  licensesystem.cpp  licensesystem.h  main.cpp  modman_util.h  moduleeventhandler.cpp  moduleeventhandler.h  modulemanager.cpp  modulemanager.h  modulemanagercontroller.cpp  modulemanagercontroller.h  priorityarbitrationsystem.cpp  priorityarbitrationsystem.h  zeradblogger.cpp  zeradblogger.h
